// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddressRowMobile > should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex overflow-hidden flex-col w-full rounded border max-w-[calc(100vw-48px)] border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="mobile-table-element"
          >
            <div
              class="flex overflow-auto py-3 px-4 space-x-3 dark:bg-black bg-theme-secondary-100 dark:bg-theme-dark-950"
              data-testid="mobile-table-element-header"
            >
              <span
                class="flex-1 text-sm font-semibold text-theme-secondary-900 truncate dark:text-theme-text"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex gap-3 items-center"
              >
                <div
                  class="inline-block px-1 text-xs font-semibold text-center rounded sm:hidden dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="block w-px h-5 sm:hidden bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
                <button
                  class="inline-flex relative justify-center items-center p-0 space-x-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 py-3 px-4 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="overflow-hidden min-w-0 text-sm font-semibold no-ligatures text-theme-text"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex overflow-hidden flex-1 justify-end"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://explorer-evm-test.mainsailhq.com/addresses/0x1Bf9cf8a006a5279ca81Ea9D3F6aC2D41e1353e2"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
                        >
                          <div
                            class="flex items-center w-full"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0x1Bf9c…e1353e2
                            </span>
                          </div>
                        </span>
                        <div
                          class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="hidden grid-cols-1 gap-2 sm:grid"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should not render validator name if name is not provided 1`] = `<DocumentFragment />`;

exports[`AddressRowMobile > should render in 375 screen width 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex overflow-hidden flex-col w-full rounded border max-w-[calc(100vw-48px)] border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="mobile-table-element"
          >
            <div
              class="flex overflow-auto py-3 px-4 space-x-3 dark:bg-black bg-theme-secondary-100 dark:bg-theme-dark-950"
              data-testid="mobile-table-element-header"
            >
              <span
                class="flex-1 text-sm font-semibold text-theme-secondary-900 truncate dark:text-theme-text"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex gap-3 items-center"
              >
                <div
                  class="inline-block px-1 text-xs font-semibold text-center rounded sm:hidden dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="block w-px h-5 sm:hidden bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
                <button
                  class="inline-flex relative justify-center items-center p-0 space-x-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 py-3 px-4 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="overflow-hidden min-w-0 text-sm font-semibold no-ligatures text-theme-text"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex overflow-hidden flex-1 justify-end"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
                        >
                          <div
                            class="flex items-center w-full"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0xB8Be76b31E402a2D89294Aa107056484Bef94362
                            </span>
                          </div>
                        </span>
                        <div
                          class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="hidden grid-cols-1 gap-2 sm:grid"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  ,
</DocumentFragment>
`;

exports[`AddressRowMobile > should render in 420 screen width 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex overflow-hidden flex-col w-full rounded border max-w-[calc(100vw-48px)] border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="mobile-table-element"
          >
            <div
              class="flex overflow-auto py-3 px-4 space-x-3 dark:bg-black bg-theme-secondary-100 dark:bg-theme-dark-950"
              data-testid="mobile-table-element-header"
            >
              <span
                class="flex-1 text-sm font-semibold text-theme-secondary-900 truncate dark:text-theme-text"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex gap-3 items-center"
              >
                <div
                  class="inline-block px-1 text-xs font-semibold text-center rounded sm:hidden dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="block w-px h-5 sm:hidden bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
                <button
                  class="inline-flex relative justify-center items-center p-0 space-x-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 py-3 px-4 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="overflow-hidden min-w-0 text-sm font-semibold no-ligatures text-theme-text"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex overflow-hidden flex-1 justify-end"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
                        >
                          <div
                            class="flex items-center w-full"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0xB8Be7…ef94362
                            </span>
                          </div>
                        </span>
                        <div
                          class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="hidden grid-cols-1 gap-2 sm:grid"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  ,
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when the maximum votes is greater than 1 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex overflow-hidden flex-col w-full rounded border max-w-[calc(100vw-48px)] border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="mobile-table-element"
          >
            <div
              class="flex overflow-auto py-3 px-4 space-x-3 dark:bg-black bg-theme-secondary-100 dark:bg-theme-dark-950"
              data-testid="mobile-table-element-header"
            >
              <span
                class="flex-1 text-sm font-semibold text-theme-secondary-900 truncate dark:text-theme-text"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex gap-3 items-center"
              >
                <div
                  class="inline-block px-1 text-xs font-semibold text-center rounded sm:hidden dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="block w-px h-5 sm:hidden bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
                <button
                  class="inline-flex relative justify-center items-center p-0 space-x-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 py-3 px-4 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="overflow-hidden min-w-0 text-sm font-semibold no-ligatures text-theme-text"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex overflow-hidden flex-1 justify-end"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
                        >
                          <div
                            class="flex items-center w-full"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0xB8Be7…ef94362
                            </span>
                          </div>
                        </span>
                        <div
                          class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="hidden grid-cols-1 gap-2 sm:grid"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when the wallet has many votes 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex overflow-hidden flex-col w-full rounded border max-w-[calc(100vw-48px)] border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="mobile-table-element"
          >
            <div
              class="flex overflow-auto py-3 px-4 space-x-3 dark:bg-black bg-theme-secondary-100 dark:bg-theme-dark-950"
              data-testid="mobile-table-element-header"
            >
              <span
                class="flex-1 text-sm font-semibold text-theme-secondary-900 truncate dark:text-theme-text"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex gap-3 items-center"
              >
                <div
                  class="inline-block px-1 text-xs font-semibold text-center rounded sm:hidden dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="block w-px h-5 sm:hidden bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
                <button
                  class="inline-flex relative justify-center items-center p-0 space-x-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 py-3 px-4 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="overflow-hidden min-w-0 text-sm font-semibold no-ligatures text-theme-text"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex overflow-hidden flex-1 justify-end"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
                        >
                          <div
                            class="flex items-center w-full"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0xB8Be7…ef94362
                            </span>
                          </div>
                        </span>
                        <div
                          class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="hidden grid-cols-1 gap-2 sm:grid"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when wallet hasn't voted 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex overflow-hidden flex-col w-full rounded border max-w-[calc(100vw-48px)] border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="mobile-table-element"
          >
            <div
              class="flex overflow-auto py-3 px-4 space-x-3 dark:bg-black bg-theme-secondary-100 dark:bg-theme-dark-950"
              data-testid="mobile-table-element-header"
            >
              <span
                class="flex-1 text-sm font-semibold text-theme-secondary-900 truncate dark:text-theme-text"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex gap-3 items-center"
              >
                <div
                  class="inline-block px-1 text-xs font-semibold text-center rounded sm:hidden dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="block w-px h-5 sm:hidden bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
                <button
                  class="inline-flex relative justify-center items-center p-0 space-x-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 py-3 px-4 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="overflow-hidden min-w-0 text-sm font-semibold no-ligatures text-theme-text"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex overflow-hidden flex-1 justify-end"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://explorer-evm-test.mainsailhq.com/addresses/0x1Bf9cf8a006a5279ca81Ea9D3F6aC2D41e1353e2"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
                        >
                          <div
                            class="flex items-center w-full"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0x1Bf9c…e1353e2
                            </span>
                          </div>
                        </span>
                        <div
                          class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="hidden grid-cols-1 gap-2 sm:grid"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex overflow-hidden flex-col w-full rounded border max-w-[calc(100vw-48px)] border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="mobile-table-element"
          >
            <div
              class="flex overflow-auto py-3 px-4 space-x-3 dark:bg-black bg-theme-secondary-100 dark:bg-theme-dark-950"
              data-testid="mobile-table-element-header"
            >
              <span
                class="flex-1 text-sm font-semibold text-theme-secondary-900 truncate dark:text-theme-text"
              />
              <div
                class="flex gap-3 items-center"
              >
                <button
                  class="inline-flex relative justify-center items-center p-0 space-x-3 text-sm font-semibold text-center rounded duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:disabled:text-theme-secondary-700 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400 disabled:text-theme-secondary-400"
                  data-testid="AddressRowMobile__select-1"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 py-3 px-4 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="overflow-hidden min-w-0 text-sm font-semibold no-ligatures text-theme-text"
                      data-testid="Address__address"
                    >
                      0x659A76be283644AEc2003aa8ba26485047fd1BFB
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Voting for
                </div>
                <div>
                  <span
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-dark-500"
                  >
                    N/A
                  </span>
                </div>
              </div>
              <div
                class="hidden grid-cols-1 gap-2 sm:grid"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Validator Status
                </div>
                <div>
                  <span
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-dark-500"
                  >
                    N/A
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when wallet not found for votes 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex overflow-hidden flex-col w-full rounded border max-w-[calc(100vw-48px)] border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="mobile-table-element"
          >
            <div
              class="flex overflow-auto py-3 px-4 space-x-3 dark:bg-black bg-theme-secondary-100 dark:bg-theme-dark-950"
              data-testid="mobile-table-element-header"
            >
              <span
                class="flex-1 text-sm font-semibold text-theme-secondary-900 truncate dark:text-theme-text"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex gap-3 items-center"
              >
                <div
                  class="inline-block px-1 text-xs font-semibold text-center rounded sm:hidden dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="block w-px h-5 sm:hidden bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
                <button
                  class="inline-flex relative justify-center items-center p-0 space-x-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 py-3 px-4 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="overflow-hidden min-w-0 text-sm font-semibold no-ligatures text-theme-text"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex overflow-hidden flex-1 justify-end"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://explorer-evm-test.mainsailhq.com/addresses/0x1Bf9cf8a006a5279ca81Ea9D3F6aC2D41e1353e2"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
                        >
                          <div
                            class="flex items-center w-full"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0x1Bf9c…e1353e2
                            </span>
                          </div>
                        </span>
                        <div
                          class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="hidden grid-cols-1 gap-2 sm:grid"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex overflow-hidden flex-col w-full rounded border max-w-[calc(100vw-48px)] border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="mobile-table-element"
          >
            <div
              class="flex overflow-auto py-3 px-4 space-x-3 dark:bg-black bg-theme-secondary-100 dark:bg-theme-dark-950"
              data-testid="mobile-table-element-header"
            >
              <span
                class="flex-1 text-sm font-semibold text-theme-secondary-900 truncate dark:text-theme-text"
              />
              <div
                class="flex gap-3 items-center"
              >
                <button
                  class="inline-flex relative justify-center items-center p-0 space-x-3 text-sm font-semibold text-center rounded duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:disabled:text-theme-secondary-700 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400 disabled:text-theme-secondary-400"
                  data-testid="AddressRowMobile__select-1"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 py-3 px-4 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="overflow-hidden min-w-0 text-sm font-semibold no-ligatures text-theme-text"
                      data-testid="Address__address"
                    >
                      0x7F9d7FdA68521c09Bd2749a36514e514abB0866F
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Voting for
                </div>
                <div>
                  <span
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-dark-500"
                  >
                    N/A
                  </span>
                </div>
              </div>
              <div
                class="hidden grid-cols-1 gap-2 sm:grid"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Validator Status
                </div>
                <div>
                  <span
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-dark-500"
                  >
                    N/A
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when wallet not loaded 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex overflow-hidden flex-col w-full rounded border max-w-[calc(100vw-48px)] border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="mobile-table-element"
          >
            <div
              class="flex overflow-auto py-3 px-4 space-x-3 dark:bg-black bg-theme-secondary-100 dark:bg-theme-dark-950"
              data-testid="mobile-table-element-header"
            >
              <span
                class="flex-1 text-sm font-semibold text-theme-secondary-900 truncate dark:text-theme-text"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex gap-3 items-center"
              >
                <button
                  class="inline-flex relative justify-center items-center p-0 space-x-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 py-3 px-4 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="overflow-hidden min-w-0 text-sm font-semibold no-ligatures text-theme-text"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Voting for
                </div>
                <div>
                  <span
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-dark-500"
                    data-testid="AddressRowMobile--nowallet"
                  >
                    N/A
                  </span>
                </div>
              </div>
              <div
                class="hidden grid-cols-1 gap-2 sm:grid"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Validator Status
                </div>
                <div>
                  <span
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-dark-500"
                  >
                    N/A
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render with active validator 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex overflow-hidden flex-col w-full rounded border max-w-[calc(100vw-48px)] border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="mobile-table-element"
          >
            <div
              class="flex overflow-auto py-3 px-4 space-x-3 dark:bg-black bg-theme-secondary-100 dark:bg-theme-dark-950"
              data-testid="mobile-table-element-header"
            >
              <span
                class="flex-1 text-sm font-semibold text-theme-secondary-900 truncate dark:text-theme-text"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex gap-3 items-center"
              >
                <div
                  class="inline-block px-1 text-xs font-semibold text-center rounded sm:hidden dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="block w-px h-5 sm:hidden bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
                <button
                  class="inline-flex relative justify-center items-center p-0 space-x-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 py-3 px-4 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="overflow-hidden min-w-0 text-sm font-semibold no-ligatures text-theme-text"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex overflow-hidden flex-1 justify-end"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
                        >
                          <div
                            class="flex items-center w-full"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0xB8Be7…ef94362
                            </span>
                          </div>
                        </span>
                        <div
                          class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="hidden grid-cols-1 gap-2 sm:grid"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-success-100 text-theme-success-700 min-w-[58px] py-[3px] dark:border-theme-success-800 dark:text-theme-success-500"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render with resigned validator 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex overflow-hidden flex-col w-full rounded border max-w-[calc(100vw-48px)] border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="mobile-table-element"
          >
            <div
              class="flex overflow-auto py-3 px-4 space-x-3 dark:bg-black bg-theme-secondary-100 dark:bg-theme-dark-950"
              data-testid="mobile-table-element-header"
            >
              <span
                class="flex-1 text-sm font-semibold text-theme-secondary-900 truncate dark:text-theme-text"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex gap-3 items-center"
              >
                <div
                  class="inline-block px-1 text-xs font-semibold text-center rounded sm:hidden dark:bg-transparent dark:border bg-theme-warning-100 text-theme-warning-900 min-w-[58px] py-[3px] dark:border-theme-danger-info-border dark:text-theme-danger-info-text"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Resigned
                </div>
                <span
                  class="block w-px h-5 sm:hidden bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
                <button
                  class="inline-flex relative justify-center items-center p-0 space-x-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 py-3 px-4 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="overflow-hidden min-w-0 text-sm font-semibold no-ligatures text-theme-text"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex overflow-hidden flex-1 justify-end"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
                        >
                          <div
                            class="flex items-center w-full"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0xB8Be7…ef94362
                            </span>
                          </div>
                        </span>
                        <div
                          class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="hidden grid-cols-1 gap-2 sm:grid"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-warning-100 text-theme-warning-900 min-w-[58px] py-[3px] dark:border-theme-danger-info-border dark:text-theme-danger-info-text"
                    data-testid="AddressRow__wallet-status"
                  >
                    Resigned
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render with standby validator 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex overflow-hidden flex-col w-full rounded border max-w-[calc(100vw-48px)] border-theme-secondary-300 dark:border-theme-secondary-800"
            data-testid="mobile-table-element"
          >
            <div
              class="flex overflow-auto py-3 px-4 space-x-3 dark:bg-black bg-theme-secondary-100 dark:bg-theme-dark-950"
              data-testid="mobile-table-element-header"
            >
              <span
                class="flex-1 text-sm font-semibold text-theme-secondary-900 truncate dark:text-theme-text"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex gap-3 items-center"
              >
                <div
                  class="inline-block px-1 text-xs font-semibold text-center rounded sm:hidden dark:bg-transparent dark:border bg-theme-warning-100 text-theme-warning-900 min-w-[58px] py-[3px] dark:border-theme-danger-info-border dark:text-theme-danger-info-text"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Standby
                </div>
                <span
                  class="block w-px h-5 sm:hidden bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
                <button
                  class="inline-flex relative justify-center items-center p-0 space-x-3 text-sm font-semibold text-center rounded border-none duration-100 ease-linear cursor-pointer hover:underline focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 py-3 px-4 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="overflow-hidden min-w-0 text-sm font-semibold no-ligatures text-theme-text"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex overflow-hidden flex-1 justify-end"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
                        >
                          <div
                            class="flex items-center w-full"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0xB8Be7…ef94362
                            </span>
                          </div>
                        </span>
                        <div
                          class="inline-block text-sm align-middle duration-200 mb-[3px] shrink-0"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="hidden grid-cols-1 gap-2 sm:grid"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="inline-block px-1 text-xs font-semibold text-center rounded dark:bg-transparent dark:border bg-theme-warning-100 text-theme-warning-900 min-w-[58px] py-[3px] dark:border-theme-danger-info-border dark:text-theme-danger-info-text"
                    data-testid="AddressRow__wallet-status"
                  >
                    Standby
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
